--- a/ci/cli-release/tasks/repackage-binaries-and-installers.yml
+++ b/ci/cli-release/tasks/repackage-binaries-and-installers.yml
@@ -4,7 +4,7 @@ platform: linux
 image: docker:///cloudfoundry/cli-ci
 
 inputs:
-- name: cli-ci
+- name: cli
 - name: edge-deb-installer-32
 - name: edge-deb-installer-64
 - name: edge-linux-binary-32
@@ -21,7 +21,7 @@ run:
   - |
     set -ex
 
-    VERSION=$(cat cli-ci/ci/VERSION)
+    VERSION=$(cat cli/ci/VERSION)
 
     mv edge-linux-binary-32/cf-cli_edge_linux_i686.tgz repackaged-binaries-and-installers/cf-cli_${VERSION}_linux_i686.tgz
     mv edge-linux-binary-64/cf-cli_edge_linux_x86-64.tgz repackaged-binaries-and-installers/cf-cli_${VERSION}_linux_x86-64.tgz
