--- a/cli-release/tasks/sign-and-repackage-installers-and-binaries.yml
+++ b/cli-release/tasks/sign-and-repackage-installers-and-binaries.yml
@@ -9,7 +9,7 @@ params:
 
 inputs:
 - name: certificates
-- name: cli-ci
+- name: cli
 - name: extracted-binaries
 - name: winstallers
 
@@ -23,7 +23,7 @@ run:
   - |
     set -ex
 
-    VERSION=$(cat cli-ci/VERSION)
+    VERSION=$(cat cli/VERSION)
 
     mkdir win32 win64
     cp extracted-binaries/cf-cli_win32.exe win32/cf.exe
