--- a/cli-release/pipeline.yml
+++ b/cli-release/pipeline.yml
@@ -161,8 +161,8 @@ jobs:
         params:
           CERT_LOCATION: {{windows-certificate-location}}
           CERT_PASSWORD_LOCATION: {{windows-certificate-password-location}}
-      - task: create-windows-installers
-        file: cli-ci/ci/cli/tasks/create-installers-windows.yml
+#     - task: create-windows-installers
+#       file: cli-ci/ci/cli/tasks/create-installers-windows.yml
       - task: sign-and-repackage-installers-and-binaries
         file: cli-ci/ci/cli/tasks/sign-and-repackage-installers-and-binaries.yml
         params:
