use the correct directory
[#130542755]

Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>

--- a/ci/cli-release/tasks/sign-and-repackage-installers-and-binaries.yml
+++ b/ci/cli-release/tasks/sign-and-repackage-installers-and-binaries.yml
@@ -23,7 +23,7 @@ run:
   - |
     set -ex
 
-    VERSION=$(cat cli/VERSION)
+    VERSION=$(cat cli/ci/VERSION)
 
     mkdir win32 win64
     cp extracted-binaries/cf-cli_win32.exe win32/cf.exe
