--- a/ci/cli-release/tasks/sign-and-repackage-installers-and-binaries.yml
+++ b/ci/cli-release/tasks/sign-and-repackage-installers-and-binaries.yml
@@ -31,7 +31,7 @@ run:
     zip -j signed-windows-zips/cf-cli_${VERSION}_win32.zip win32/cf.exe
     zip -j signed-windows-zips/cf-cli_${VERSION}_winx64.zip win64/cf.exe
 
-    unzip winstallers/cf-cli-installer_edge_winx64.zip # Not really edge, see pipeline
+    unzip winstallers/cf-cli-installer_winx64.zip
 
     mkdir signed-64
     osslsigncode sign \
@@ -45,7 +45,7 @@ run:
 
     zip -j signed-windows-zips/cf-cli-installer_${VERSION}_winx64.zip signed-64/cf_installer.exe
 
-    unzip winstallers/cf-cli-installer_edge_win32.zip # Not really edge, see pipeline
+    unzip winstallers/cf-cli-installer_win32.zip
 
     mkdir signed-32
     osslsigncode sign \
