generate bosh-lite cf manifest for routing-release
Signed-off-by: Matthew Boedicker <mboedicker@pivotal.io>

--- a/ci/infrastructure/tasks/deploy-routing.yml
+++ b/ci/infrastructure/tasks/deploy-routing.yml
@@ -36,6 +36,10 @@ run:
 
     bosh -n -u $ADMIN_USER -p $ADMIN_PASSWORD upload release cf-routing-release/release.tgz --skip-if-exists
 
+    pushd cf-release-repo
+      ./scripts/generate-bosh-lite-dev-manifest
+    popd
+
     cd cf-routing-release-repo
 
     bosh -n -u $ADMIN_USER -p $ADMIN_PASSWORD download manifest $cf_deployment_name $cf_deployment_file
