Skip config_test.go in CATs
It fails intermittently because of suspected test pollution from setting
CONFIG in the environment. Re-enable when CATs are fixed.

--- a/ci/cli/tasks/cats-linux.yml
+++ b/ci/cli/tasks/cats-linux.yml
@@ -128,7 +128,7 @@ run:
 
     export CONFIG=$PWD/integration_config.json
 
-    SKIPS="-skip="
+    SKIPS="-skip=Config|"
     $SKIP_SSO && SKIPS="${SKIPS}SSO|"
     [[ "$BACKEND" = "diego" ]] && SKIPS="${SKIPS}NO_DIEGO_SUPPORT|"
     [[ "$BACKEND" = "dea" ]] && SKIPS="${SKIPS}NO_DEA_SUPPORT|"
