pull integration before running tests
[#132181413]

Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>

--- a/ci/cli/pipeline.yml
+++ b/ci/cli/pipeline.yml
@@ -328,6 +328,7 @@ jobs:
       passed: [build-binaries]
     - get: cli-acceptance-tests
     - get: cli-ci
+    - get: cli-integration
     - put: bosh-lite-lock
       resource: bosh-lites-dea-pool
       params:
