--- a/cli/tasks/units-windows.yml
+++ b/cli/tasks/units-windows.yml
@@ -4,6 +4,7 @@ platform: windows
 inputs:
 - name: cli
   path: gopath/src/code.cloudfoundry.org/cli
+- name: cli-ci
 
 run:
-  path: gopath/src/code.cloudfoundry.org/cli/ci/cli/tasks/units-windows.bat
+  path: gopath/src/code.cloudfoundry.org/cli-ci/ci/cli/tasks/units-windows.bat
