--- a/ci/cli/tasks/cats-linux.yml
+++ b/ci/cli/tasks/cats-linux.yml
@@ -98,7 +98,7 @@ run:
 
     [ -n "$BACKEND" ] && echo "  \"backend\": \"${BACKEND}\"," >> integration_config.json
     [ -n "$DEFAULT_TIMEOUT" ] && echo "  \"default_timeout\": \"${DEFAULT_TIMEOUT}\"," >> integration_config.json
-    [ -n "$CF_PUSH_TIMEOUT" ] && echo "  \"cf_push_timeout\": \"${CF_PUSH_TIMEOUT}\"," >> integration_config.json
+    [ -n "$CF_PUSH_TIMEOUT" ] && echo "  \"cf_push_timeout\": ${CF_PUSH_TIMEOUT}," >> integration_config.json
     [ -n "$LONG_CURL_TIMEOUT" ] && echo "  \"long_curl_timeout\": \"${LONG_CURL_TIMEOUT}\"," >> integration_config.json
     [ -n "$BROKER_START_TIMEOUT" ] && echo "  \"broker_start_timeout\": \"${BROKER_START_TIMEOUT}\"," >> integration_config.json
 
