Remove -r from CATs ginkgo command
All CATs are in a single suite at the top level and -r
runs internal tests that we don't need to run.

Remove Config skip because it was only being run from -r.

[#132328671]

--- a/ci/cli/tasks/cats-linux.yml
+++ b/ci/cli/tasks/cats-linux.yml
@@ -128,7 +128,7 @@ run:
 
     export CONFIG=$PWD/integration_config.json
 
-    SKIPS="-skip=Config|"
+    SKIPS="-skip="
     $SKIP_SSO && SKIPS="${SKIPS}SSO|"
     [[ "$BACKEND" = "diego" ]] && SKIPS="${SKIPS}NO_DIEGO_SUPPORT|"
     [[ "$BACKEND" = "dea" ]] && SKIPS="${SKIPS}NO_DEA_SUPPORT|"
@@ -139,7 +139,6 @@ run:
     SKIPS=$(echo $SKIPS | sed -E 's/(.*)(\|)/\1/')
 
     ./bin/test \
-      -r \
       -slowSpecThreshold=120 -randomizeAllSpecs \
       -nodes "${NODES}" \
       "${SKIPS}" \
