Increase default timeout for Diego CATs
It is timing out on "Users can manage droplet bits
for an app" just like the DEA CATs.

--- a/ci/cli/pipeline.yml
+++ b/ci/cli/pipeline.yml
@@ -423,6 +423,7 @@ jobs:
     file: cli-ci/ci/cli/tasks/cats-linux.yml
     params:
       BACKEND: diego
+      DEFAULT_TIMEOUT: 60
     ensure:
       put: bosh-lites-diego-pool
       params:
