--- a/ci/infrastructure/tasks/deploy-diego.yml
+++ b/ci/infrastructure/tasks/deploy-diego.yml
@@ -9,7 +9,7 @@ params:
 inputs:
 - name: bosh-lite-lock
 - name: etcd-release
-- name: garden-linux-release
+- name: garden-runc-release
 - name: diego-release
 - name: diego-repo
 - name: cflinuxfs2-rootfs-release
@@ -25,7 +25,7 @@ run:
     bosh login admin admin
     bosh upload release cflinuxfs2-rootfs-release/release.tgz --skip-if-exists
     bosh upload release etcd-release/release.tgz --skip-if-exists
-    bosh upload release garden-linux-release/release.tgz --skip-if-exists
+    bosh upload release garden-runc-release/release.tgz --skip-if-exists
     bosh upload release diego-release/release.tgz --skip-if-exists
 
     pushd diego-repo
