switch to using 6 nodes for CATs tests
lets see if this reduces the running time in pipeline

--- a/ci/cli/pipeline.yml
+++ b/ci/cli/pipeline.yml
@@ -389,6 +389,7 @@ jobs:
       params:
         BACKEND: dea
         DEFAULT_TIMEOUT: 60
+        NODES: 6
       on_failure:
          put: slack-alert
          params:
@@ -424,6 +425,7 @@ jobs:
     params:
       BACKEND: diego
       DEFAULT_TIMEOUT: 60
+      NODES: 6
     ensure:
       put: bosh-lites-diego-pool
       params:
