use the correct instance type
[#132357857]

Signed-off-by: Matthew Boedicker <mboedicker@pivotal.io>

--- a/ci/infrastructure/tasks/provision-cf-lite.yml
+++ b/ci/infrastructure/tasks/provision-cf-lite.yml
@@ -15,7 +15,7 @@ params:
   BOSH_LITE_SECURITY_GROUP:
   BOSH_LITE_SUBNET_ID:
   LITE_PRIVATE_KEY_PATH:
-  BOSH_LITE_INSTANCE_TYPE: r3.2xlarge
+  BOSH_LITE_INSTANCE_TYPE: r3.xlarge
 
 inputs:
   - name: cli-private
