--- a/ci/infrastructure/tasks/provision-cf-lite.yml
+++ b/ci/infrastructure/tasks/provision-cf-lite.yml
@@ -15,7 +15,7 @@ params:
   BOSH_LITE_SECURITY_GROUP:
   BOSH_LITE_SUBNET_ID:
   LITE_PRIVATE_KEY_PATH:
-  BOSH_LITE_INSTANCE_TYPE: r3.xlarge
+  BOSH_LITE_INSTANCE_TYPE: m3.2xlarge
 
 inputs:
   - name: cli-private
