make CATs linux fail early

--- a/ci/cli/tasks/cats-linux.yml
+++ b/ci/cli/tasks/cats-linux.yml
@@ -141,5 +141,4 @@ run:
     ./bin/test \
       -slowSpecThreshold=120 -randomizeAllSpecs \
       -nodes "${NODES}" \
-      "${SKIPS}" \
-      -keepGoing
+      "${SKIPS}"
