--- a/cli/tasks/cats-config.yml
+++ b/cli/tasks/cats-config.yml
@@ -26,19 +26,19 @@ run:
 
     export DOMAIN=`cat bosh-lite-lock/name`
 
-    cat << EOF > cats-config/integration_config.json
+    cat << EOF > cats-config/integration_config.json | jq .
     {
       "admin_password": "admin",
       "admin_user": "admin",
       "api": "api.$DOMAIN",
       "apps_domain": "$DOMAIN",
-      "backend" : "$BACKEND"
+      "backend" : "$BACKEND",
       "broker_start_timeout": $BROKER_START_TIMEOUT,
       "cf_push_timeout": $CF_PUSH_TIMEOUT,
       "default_timeout": $DEFAULT_TIMEOUT,
       "include_v3": $INCLUDE_V3,
       "long_curl_timeout": $LONG_CURL_TIMEOUT,
       "skip_ssl_validation": true,
-      "use_http": false,
+      "use_http": false
     }
     EOF
