--- a/ci/cli/tasks/cats-windows.yml
+++ b/ci/cli/tasks/cats-windows.yml
@@ -2,8 +2,6 @@
 platform: windows
 
 params:
-  ADMIN_USER: admin
-  ADMIN_PASSWORD: admin
   NODES:
 
 inputs:
@@ -12,6 +10,7 @@ inputs:
 - name: bosh-lite-lock
 - name: cli
 - name: cli-ci
+- name: cats-config
 
 run:
   path: cli-ci/ci/cli/tasks/cats-windows.bat
